# ja4

ja4-plugin/: CMakeLists.txt  README
ja4-plugin/scripts/: __load__.zeek  config.zeek  main.zeek
ja4-plugin/scripts/ja4/: __load__.zeek  main.zeek
ja4-plugin/scripts/ja4d/: __load__.zeek  consts.zeek  main.zeek
ja4-plugin/scripts/ja4h/: main.zeek
ja4-plugin/scripts/ja4l/: main.zeek
ja4-plugin/scripts/ja4s/: __load__.zeek  helpers.zeek  main.zeek
ja4-plugin/scripts/ja4ssh/: __load__.zeek  helpers.zeek  main.zeek
ja4-plugin/scripts/ja4t/: main.zeek
ja4-plugin/scripts/utils/: common.zeek  ssl-consts.zeek
ja4-plugin/src/: Plugin.cc  Plugin.h  common.cc  common.h  helpers.cc  ja4.bif  ja4.cc  ja4.h  ja4d.cc  ja4d.h  ja4h.cc  ja4h.h  ja4s.cc  ja4s.h  ja4ssh.cc  ja4ssh.h  ja4t.cc  ja4t.h  ssl-consts.h
ja4-plugin/tests/: btest.cfg
ja4-plugin/tests/Baseline/ja4.ja4-tls/: output
ja4-plugin/tests/Baseline/ja4.ja4d-dhcp/: output
ja4-plugin/tests/Baseline/ja4.ja4h-http/: output
ja4-plugin/tests/Baseline/ja4.ja4l-tls/: output
ja4-plugin/tests/Baseline/ja4.ja4s-tls/: output
ja4-plugin/tests/Baseline/ja4.ja4ssh-ssh2/: output
ja4-plugin/tests/Baseline/ja4.ja4t-tls/: output
ja4-plugin/tests/Baseline/ja4.show-plugin/: output
ja4-plugin/tests/Traces/: dhcp.pcapng  http1-with-cookies.pcapng  latest.pcapng  ssh2.pcapng  tls-handshake.pcapng
ja4-plugin/tests/ja4/: ja4-tls.zeek  ja4d-dhcp.zeek  ja4h-http.zeek  ja4l-tls.zeek  ja4s-tls.zeek  ja4ssh-ssh2.zeek  ja4t-tls.zeek  show-plugin.zeek
zeek/ja4ssh/: main.zeek
